feat(Package): add migrate to prisma

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma": "prisma",
     "seed": "npx prisma db seed",
+    "prisma:migrate": "prisma migrate deploy",
     "prepare": "npx prisma generate"
   },
   "dependencies": {
